# bevy_trivia

./: Cargo.toml  README.md  bevy_trivia-2ef22600ce02f823.js  bevy_trivia-96fadbccbe431183.js  bevy_trivia-ccf8835dccc94f40.js  favilo_trivia-3868e62e75542f74.js  favilo_trivia-c3bf23d91f0de3e4.js  favilo_trivia-e7a142bc135e6846.js  index.html
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml
assets/menus/: credits.menu.ron  host.menu.ron  join.menu.ron  main.menu.ron  play.menu.ron  settings.menu.ron
credits/: CREDITS.md
mobile/: Cargo.toml  Makefile  manifest.yaml
mobile/mobile.xcodeproj/: project.pbxproj
mobile/src/: keyboard.rs  lib.rs
src/: audio.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs  utils.rs
src/actions/: mod.rs
src/lobby/: mod.rs
src/menu/: credits.rs  main_menu.rs  mod.rs  serde.rs  utils.rs
src/menu/widgets/: mod.rs  multi_dropdown.rs  text_input.rs
src/trivia/source/: mod.rs  open_tdb.rs  trivia_api.rs
